<resources>
    <string name="app_name">Anheuser</string>
    <string name="action_search">Search</string>
    <string name="action_microphone">Microphone</string>

    <!-- HOME PAGE -->
    <string name="view_order">View Order</string>
    <string name="completed">Completed</string>
    <string name="today_deliveries">Today\'s Deliveries</string>
    <string name="main_sync_progress">Sync in Progress</string>


    <!-- ORDER DETAIL -->
    <string name="action_complete_order">Complete Order</string>
    <string name="order_complete">Order Complete</string>
    <string name="order_number_format">Order number %1$s</string>
    <string name="order_total_format">Order Total: %1$s</string>

    <string name="sample_account_name">Account Name</string>
    <string name="sample_account_address">123 East Main Street</string>
    <string name="sample_order_number">Order number 123456</string>
    <string name="sample_order_total">Order Total: $88,888.88</string>

    <!-- ORDER DETAIL ITEM -->
    <string name="order_item_quantity_format">Qty: %1$s</string>
    <string name="order_item_unit_price_format">Unit Price: %1$s</string>
    <string name="order_item_total_format">Total Price: %1$s</string>

    <string name="sample_order_item_name">Product Lorem Ipsum</string>
    <string name="sample_order_item_quantity">Qty: 33</string>
    <string name="sample_order_item_unit_price">Unit Price: $88</string>
    <string name="sample_order_item_total">Total Price: $8,8888.88</string>
    <string name="message_no_connection">Check your internet connection and try again.</string>
    <string name="message_server_error">Error occured in server. Please try again later.</string>
    <string name="message_not_implemented">Not implemented yet</string>
    <string name="text_close">Close</string>
    <string name="message_sync_back">Have been saved back to Salesforce</string>
    <string name="text_ok">OK</string>
    <string name="message_order_loaded">Order data reloaded succesfully</string>
    <string name="text_saving">Saving</string>
    <string name="text_please_wait">Please Wait...</string>
    <string name="message_offline_dirty_sync">You are offline.\nStatus will be synced with Salesforce in the next sync.</string>
</resources>
