<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/medium_margin"
    android:layout_marginBottom="@dimen/medium_margin"
    tools:context=".view.activity.OrderDetailActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_order_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/sample_order_item_name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/narrow_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_order_item_qty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sample_order_item_quantity"/>


        <TextView
            android:id="@+id/tv_order_item_unit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/sample_order_item_unit_price"/>

        <TextView
            android:id="@+id/tv_order_item_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/sample_order_item_total"/>
    </LinearLayout>

</LinearLayout>
